tests/paczka1/fuzzy1/70356266.err
Error in line 2: MBa S607 24,8
Error in line 4: S607 S338 22,1
Error in line 13: Xut A972 94,1
Error in line 10: S607 S607 68,3
Error in line 21: Tvc5vih S338 33,3
Error in line 31: S607 S466 77,2
